--- a/src/styles/auth.scss
+++ b/src/styles/auth.scss
@@ -36,26 +36,26 @@
         align-items: center;
         justify-content: center;
     }
-    .main-content{
-        display:flex;
+    .main-content {
+        display: flex;
         flex-direction: column;
         width: 100%;
         max-width: 320px;
         align-items: stretch;
         text-align: center;
 
-        > img{
+        > img {
             align-self: center;
         }
 
-        h2{
+        h2 {
             font-size: 24px;
             margin: 64px 0 24px;
-            font-family: 'Poppins', sans-serif;
+            font-family: "Poppins", sans-serif;
         }
-        
-        form{
-            input{
+
+        form {
+            input {
                 height: 50px;
                 border-radius: 8px;
                 padding: 0 16px;
@@ -63,24 +63,25 @@
                 border: 1px solid #a8a8b3;
             }
 
-            button{
+            button {
                 margin-top: 16px;
             }
-            button, input{
+            button,
+            input {
                 width: 100%;
             }
         }
-        p{
+        p {
             font-size: 14px;
             color: #737380;
             margin-top: 16px;
 
-            a{
+            a {
                 color: #e559f9;
             }
         }
     }
-    .create-room{
+    .create-room {
         margin-top: 64px;
         height: 50px;
         border-radius: 8px;
@@ -94,31 +95,31 @@
         border: 0;
         transition: filter 0.2s;
 
-        img{
+        img {
             margin-right: 8px;
         }
 
-        &:hover{
+        &:hover {
             filter: brightness(0.9);
         }
     }
 
-    .separator{
+    .separator {
         font-size: 14px;
         color: #a8a8b3;
         margin: 32px 0;
         display: flex;
         align-items: center;
 
-        &::before{
-            content: '';
+        &::before {
+            content: "";
             flex: 1;
             height: 1px;
             background: #a8a8b3;
             margin-right: 16px;
         }
-        &::after{
-            content: '';
+        &::after {
+            content: "";
             flex: 1;
             height: 1px;
             background: #a8a8b3;
